# agribot-ros2-v2

./: documentation.md  fix_leds.py  fix_leds_2.py  fix_mutex_drive.py  fix_mutex_payload.py  liftoff.md  publish_synthetic.py  run_stack.sh  start_agribot.sh  start_vite.sh  system_design.md  update_docs.py  update_liftoff.py  wifi_config.h
agribot_web/: setup.cfg  setup.py
agribot_web/agribot_web/: obstacle_avoidance.py  synthetic_moisture_node.py  web_server.py
agribot_web/frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
agribot_web/frontend/src/: App.tsx  index.css  roslib.d.ts
agribot_web/frontend/src/components/: Layout.tsx  Navbar.tsx
agribot_web/frontend/src/lib/: api.ts  ros.ts
agribot_web/frontend/src/pages/: Control.tsx  Dashboard.tsx  Logs.tsx
agribot_web/launch/: agribot_web.launch.py
esp-cam-node/: README.md  platformio.ini
esp-cam-node/src/: main.cpp
esp-drive-node/: platformio.ini
esp-drive-node/src/: main.cpp
esp-drive-node/test/: test_sonar.cpp
esp-firmware/: README.md  agent.md  platformio.ini
esp-firmware/src/: main.cpp
esp-payload-node/: platformio.ini
esp-payload-node/src/: main.cpp
install/: local_setup.sh  setup.sh
install/agribot_web/lib/agribot_web/: obstacle_avoidance  sensor_logger  synthetic_moisture_node  web_server
install/agribot_web/share/agribot_web/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/agribot_web/share/agribot_web/launch/: agribot_web.launch.py
log/: latest_build
