<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agribot_web</name>
  <version>1.0.0</version>
  <description>AgriBot web dashboard: sensor logging, REST API, and rosbridge launcher</description>
  <maintainer email="agribot@localhost.com">agribot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
